--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore explicabo labore quis laudantium aliquid officia culpa deleniti officiis fugit sint.
         </div>
         <div class="box-2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore explicabo labore quis laudantium aliquid officia culpa deleniti officiis fugit sint.
+            Lorem2 ipsum dolor sit amet consectetur adipisicing elit. Inventore explicabo labore quis laudantium aliquid officia culpa deleniti officiis fugit sint.
         </div>
         <div class="box-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore explicabo labore quis laudantium aliquid officia culpa deleniti officiis fugit sint.
+            Lorem2 ipsum dolor sit amet consectetur adipisicing elit. Inventore explicabo labore quis laudantium aliquid officia culpa deleniti officiis fugit sint.
         </div>
     </section>
 </body>
